# AneRend

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
app/: CMakeLists.txt  main.cpp
app/LodePng/: lodepng.cpp
app/assets/: bilateral_filter_comp.spv  bloom_composite_comp.spv  bloom_downsample_comp.spv  bloom_prefilter_comp.spv  bloom_upsample_comp.spv  compile_shaders.bat  cull_comp.spv  debug_spheres_frag.spv  debug_spheres_vert.spv  debug_view_frag.spv  deferred_cluster_comp.spv  deferred_pbr_frag.spv  deferred_tiled_comp.spv  frag.spv  fullscreen_vert.spv  grass_frag.spv  grass_vert.spv  hiz_comp.spv  imgui.ini  irradiance_probe_update_rchit.spv  irradiance_probe_update_rgen.spv  irradiance_probe_update_rmiss.spv  light_shadow_rchit.spv  light_shadow_rgen.spv  light_shadow_sum_comp.spv  luminance_average_comp.spv  luminance_histogram_comp.spv  mirror_reflections_rchit.spv  mirror_reflections_rgen.spv  mirror_reflections_rmiss.spv  particle_update_comp.spv  pp_blur_frag.spv  pp_color_inv_frag.spv  pp_flip_frag.spv  pp_fxaa_frag.spv  pp_vert.spv  probe_conv_comp.spv  shadow_debug_frag.spv  shadow_rchit.spv  shadow_rgen.spv  (+21 more)
app/assets/models/: lots_of_models.mtl  low_poly_tree.mtl  truck.mtl
app/assets/shaders/: bilateral_filter.comp  bindless.glsl  bindless_tlas.glsl  bloom_composite.comp  bloom_downsample.comp  bloom_prefilter.comp  bloom_upsample.comp  cull.comp  debug_spheres.frag  debug_spheres.vert  debug_view.frag  deferred_cluster.comp  deferred_pbr.frag  deferred_tiled.comp  grass.frag  grass.vert  helpers.glsl  hiz.comp  irradiance_probe_update.rchit  irradiance_probe_update.rgen  irradiance_probe_update.rmiss  light_shadow_helpers.glsl  light_shadow_sum.comp  luminance_average.comp  luminance_histogram.comp  mirror_reflections.rchit  mirror_reflections.rgen  mirror_reflections.rmiss  octahedron_helpers.glsl  particle_update.comp  pbr_light.glsl  pp.vert  pp_color_inv.frag  pp_flip.frag  pp_fxaa.frag  probe_conv.comp  probe_helpers.glsl  sampling.glsl  scene_ubo.glsl  shadow.rchit  (+24 more)
app/imgui/: imgui.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_widgets.cpp
app/input/: MouseButtonInput.cpp  MouseButtonInput.h
app/logic/: Application.cpp  StageApplication.cpp  StageApplication.h  WindSystem.cpp  WindSystem.h
app/render/: AccelerationStructure.h  AllocatedBuffer.h  Box3D.cpp  Box3D.h  BufferHelpers.h  Camera.cpp  Camera.h  ComputePipeline.cpp  ComputePipeline.h  CullRenderPass.cpp  CullRenderPass.h  DebugViewRenderPass.cpp  DebugViewRenderPass.h  FrameGraphBuilder.cpp  FrameGraphBuilder.h  GeometryRenderPass.cpp  Geometrypass.h  GpuBuffers.h  GrassRenderPass.cpp  Identifiers.cpp  Identifiers.h  ImageHelpers.h  Light.h  Material.cpp  Material.h  MaterialFactory.cpp  MaterialFactory.h  MaterialId.h  Mesh.h  MeshId.h  Model.cpp  Model.h  Particle.h  PbrMaterialData.h  PipelineUtil.cpp  PipelineUtil.h  PostProcessingPass.h  PresentationRenderPass.cpp  PresentationRenderPass.h  QueueFamilyIndices.h  (+22 more)
app/render/animation/: Animation.h  Animator.cpp  Animator.h  Joint.h  Skeleton.h
app/render/asset/: Animator.h  Material.h  Mesh.h  Model.h  Renderable.h
app/render/internal/: AnimationThread.cpp  AnimationThread.h  Animator.cpp  Animator.h  BufferMemoryInterface.cpp  BufferMemoryInterface.h  DeletionQueue.cpp  GigaBuffer.h  InternalMesh.h  InternalModel.h  InternalRenderable.h
app/render/passes/: BloomRenderPass.cpp  BloomRenderPass.h  CullRenderPass.cpp  CullRenderPass.h  DebugBSRenderPass.cpp  DebugBSRenderPass.h  DebugViewRenderPass.cpp  DebugViewRenderPass.h  DeferredLightingRenderPass.cpp  DeferredLightingRenderPass.h  FXAARenderPass.cpp  FXAARenderPass.h  GeometryRenderPass.cpp  GeometryRenderPass.h  GrassRenderPass.cpp  GrassRenderPass.h  GrassShadowRenderPass.cpp  GrassShadowRenderPass.h  HiZRenderPass.cpp  HiZRenderPass.h  IrradianceProbeConvolvePass.cpp  IrradianceProbeConvolvePass.h  IrradianceProbeRayTracingPass.cpp  IrradianceProbeRayTracingPass.h  IrradianceProbeTranslationPass.cpp  IrradianceProbeTranslationPass.h  LightShadowRayTracingPass.cpp  LightShadowRayTracingPass.h  LightShadowSumPass.cpp  LuminanceAveragePass.cpp  LuminanceHistogramPass.cpp  ParticleUpdatePass.cpp  PresentationRenderPass.cpp  PresentationRenderPass.h  RenderPass.cpp  RenderPass.h  SSAOBlurRenderPass.cpp  SSAOBlurRenderPass.h  SSAORenderPass.cpp  (+21 more)
app/tinygltf/: tiny_gltf.h
app/util/: GLTFLoader.cpp  GLTFLoader.h  GraphicsUtils.h  OBJLoader.cpp  OBJLoader.h  nanojpeg.cpp
contrib/imgui/: CMakeLists.txt  imgui_impl_vulkan.cpp
src/anedit/: CMakeLists.txt  main.cpp
src/anerend/: CMakeLists.txt
src/heightmapgen/: CMakeLists.txt  main.cpp
(+382 files in other folders)
